attached_assets/Pasted--node-modules-es6-iterator-index-js-node-modules-snakecase-keys-index-js-node-modules-regexpara-1755765934008_1755765934008.txt
./node_modules/es6-iterator/index.js
./node_modules/snakecase-keys/index.js
./node_modules/regexparam/dist/index.js
./node_modules/regexparam/dist/index.min.js
./node_modules/strip-ansi-cjs/node_modules/ansi-regex/index.js
./node_modules/strip-ansi-cjs/index.js
./node_modules/eventemitter3/index.js
./node_modules/normalize-path/index.js
[root@racknerd-47e65b8 addypin-repo]# ls -la dist/ 2>/dev/null || echo "Still no dist directory"
total 88
drwxr-xr-x  3 root root  4096 Aug 20 09:26 .
drwxr-xr-x 13 root root  4096 Aug 21 04:41 ..
-rw-r--r--  1 root root 74869 Aug 20 17:10 index.js
drwxr-xr-x  3 root root  4096 Aug 21 04:41 public
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Show results
[root@racknerd-47e65b8 addypin-repo]# echo "=== ANALYSIS COMPLETE ==="
=== ANALYSIS COMPLETE ===
[root@racknerd-47e65b8 addypin-repo]# echo "Ready for Step 3: Smart Dockerfile creation"
Ready for Step 3: Smart Dockerfile creation
[root@racknerd-47e65b8 addypin-repo]# clear

[root@racknerd-47e65b8 addypin-repo]# cd /opt/addypin/addypin-repo
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Step 3: Create Smart Dockerfile with proper fallback logic
[root@racknerd-47e65b8 addypin-repo]# cat > Dockerfile << 'EOF'
> FROM node:20-alpine3.19
> 
> # Install minimal build dependencies
> RUN apk add --no-cache python3 make g++ git
> 
> # Create user (build as root first, then switch)
> RUN addgroup -g 1001 -S runner && adduser -u 1001 -S runner -G runner
> 
> # Set working directory
> WORKDIR /app
> 
> # Copy package files
> COPY package*.json ./
> 
> # Install all dependencies (including dev dependencies for build)
> RUN npm ci --no-audit --prefer-offline
> 
> # Copy source code
> COPY . .
> 
> # Set production environment
> ENV NODE_ENV=production
> 
> # Build application (frontend only via vite build)
> RUN npm run build
> 
> # Check what the build produced
> RUN echo "=== Build Results ===" && \
>     ls -la dist/ && \
>     echo "=== Server Files ===" && \
>     ls -la server/ && \
>     echo "=== Entry Points ===" && \
>     find . -maxdepth 2 -name "index.*" -type f
> 
> # Switch to non-root user for security
> RUN chown -R runner:runner /app
> USER runner
> 
> EXPOSE 5000
> 
> # Smart startup command with fallbacks
> CMD ["sh", "-c", "\
>   echo 'Starting AddyPin application...'; \
>   echo 'Checking available startup options:'; \
>   if [ -f 'dist/index.js' ]; then \
>     echo 'Found dist/index.js - using built backend'; \
>     exec node dist/index.js; \
>   elif [ -f 'server/index.ts' ]; then \
>     echo 'Using TypeScript server with tsx'; \
>     exec npx tsx server/index.ts; \
>   else \
>     echo 'Fallback to npm start'; \
>     exec npm start; \
>   fi \
> "]
> EOF
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Step 4: Build and test with debugging
[root@racknerd-47e65b8 addypin-repo]# echo "Building smart Docker image..."
Building smart Docker image...
[root@racknerd-47e65b8 addypin-repo]# docker build -t addypin-app .
[+] Building 0.3s (1/2)                                          docker:default
[+] Building 88.6s (15/15) FINISHED                              docker:default
 => [internal] load build definition from Dockerfile                       0.0s
 => => transferring dockerfile: 1.42kB                                     0.0s
 => [internal] load metadata for docker.io/library/node:20-alpine3.19      0.6s
 => [internal] load .dockerignore                                          0.0s
 => => transferring context: 99B                                           0.0s
 => [ 1/10] FROM docker.io/library/node:20-alpine3.19@sha256:1cc9088b0fbc  0.0s
 => [internal] load build context                                          0.0s
 => => transferring context: 20.04kB                                       0.0s
 => CACHED [ 2/10] RUN apk add --no-cache python3 make g++ git             0.0s
 => CACHED [ 3/10] RUN addgroup -g 1001 -S runner && adduser -u 1001 -S r  0.0s
 => CACHED [ 4/10] WORKDIR /app                                            0.0s
 => [ 5/10] COPY package*.json ./                                          0.0s
 => [ 6/10] RUN npm ci --no-audit --prefer-offline                        26.9s
 => [ 7/10] COPY . .                                                       0.2s 
 => [ 8/10] RUN npm run build                                             18.1s 
 => [ 9/10] RUN echo "=== Build Results ===" &&     ls -la dist/ &&     e  0.3s 
 => [10/10] RUN chown -R runner:runner /app                               22.3s 
 => exporting to image                                                    19.8s 
 => => exporting layers                                                   19.8s 
 => => writing image sha256:234f8a3e93344c67c91086465c8aa2865a13b85129a2a  0.0s 
 => => naming to docker.io/library/addypin-app                             0.0s 
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Clean up old containers
[root@racknerd-47e65b8 addypin-repo]# docker stop addypin-production 2>/dev/null || true
addypin-production
[root@racknerd-47e65b8 addypin-repo]# docker rm addypin-production 2>/dev/null || true
addypin-production
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Run production container
[root@racknerd-47e65b8 addypin-repo]# docker run -d \
>   -p 3000:5000 \
>   --name addypin-production \
>   --restart unless-stopped \
>   -e NODE_ENV=production \
>   -e DATABASE_URL="postgresql://addypin:addypin_password@172.17.0.1:5432/addypin_db" \
>   addypin-app
3441d3b0a69b2656475cd74489f357ffef3a3739b40316c75145f64903e7ff8d
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Wait and check results
[root@racknerd-47e65b8 addypin-repo]# sleep 10
[root@racknerd-47e65b8 addypin-repo]# echo "=== Container Status ==="
=== Container Status ===
[root@racknerd-47e65b8 addypin-repo]# docker ps | grep addypin
3441d3b0a69b   addypin-app   "docker-entrypoint.s…"   11 seconds ago   Restarting (1) Less than a second ago             addypin-production
[root@racknerd-47e65b8 addypin-repo]# echo "=== Container Logs ==="
=== Container Logs ===
[root@racknerd-47e65b8 addypin-repo]# docker logs addypin-production
Starting AddyPin application...
Checking available startup options:
Using TypeScript server with tsx
/app/server/db.ts:2
import { Pool } from 'pg';
         ^

SyntaxError: The requested module 'pg' does not provide an export named 'Pool'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)

Node.js v20.18.1
npm notice
npm notice New major version of npm available! 10.8.2 -> 11.5.2
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.5.2
npm notice To update run: npm install -g npm@11.5.2
npm notice
Starting AddyPin application...
Checking available startup options:
Using TypeScript server with tsx
/app/server/db.ts:2
import { Pool } from 'pg';
         ^

SyntaxError: The requested module 'pg' does not provide an export named 'Pool'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)

Node.js v20.18.1
Starting AddyPin application...
Checking available startup options:
Using TypeScript server with tsx
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Test the application
[root@racknerd-47e65b8 addypin-repo]# curl -s http://localhost:3000/api/stats || echo "Application not responding yet"
Application not responding yet
[root@racknerd-47e65b8 addypin-repo]# 
